force-app/main/default/objects/Related_to_feedback_Category__mdt/Related_to_feedback_Category__mdt.object-meta.xml
<CustomObject>
    <label>Related to feedback Category</label>
    <pluralLabel>Related to feedback Categories</pluralLabel>
</CustomObject>