force-app/main/default/objects/Related_to_feedback_Category__mdt/fields/Relating_to__c.field-meta.xml
<CustomField>
    <fullName>Relating_to__c</fullName>
    <label>Relating to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>