force-app/main/default/objects/Related_to_feedback_Category__mdt/fields/Relating_to_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Relating_to_Sub_Category__c</fullName>
    <label>Relating to Sub Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>