force-app/main/default/objects/Related_to_feedback_Category__mdt/listViews/All_fields.listView-meta.xml
<ListView>
    <fullName>All_fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Property__c</columns>
    <columns>Relating_to__c</columns>
    <columns>Relating_to_Sub_Menu__c</columns>
    <columns>Relating_to_Sub_Category__c</columns>
    <columns>Relating_to_Sub_Category_2__c</columns>
    <filterScope>Everything</filterScope>
    <label>All fields</label>
</ListView>